@@ -8,18 +8,16 @@ import JOO.jooshop.members.entity.Member;
 import JOO.jooshop.members.repository.MemberRepository;
 import JOO.jooshop.productManagement.entity.ProductManagement;
 import JOO.jooshop.productManagement.repository.ProductManagementRepository;
-
 import lombok.RequiredArgsConstructor;
 import org.springframework.stereotype.Service;
 import org.springframework.transaction.annotation.Transactional;
 
-import java.math.BigDecimal;
 import java.util.List;
 import java.util.NoSuchElementException;
-import java.util.stream.Collectors;
 
-import static JOO.jooshop.global.exception.ResponseMessageConstants.*;
 import static JOO.jooshop.global.authorization.MemberAuthorizationUtil.verifyUserIdMatch;
+import static JOO.jooshop.global.exception.ResponseMessageConstants.MEMBER_NOT_FOUND;
+import static JOO.jooshop.global.exception.ResponseMessageConstants.PRODUCT_NOT_FOUND;
 
 @Service
 @Transactional(rollbackFor = Exception.class)
@@ -30,88 +28,118 @@ public class CartService {
     private final MemberRepository memberRepository;
     private final ProductManagementRepository productManagementRepository;
 
-    /** =================== 장바구니 리스트 조회 =================== */
+    /**
+     * 로그인 사용자의 장바구니 전체 조회
+     */
+    @Transactional(readOnly = true)
     public List<CartDto> allCarts(Long memberId) {
-        // 사용자 검증
-        verifyUserIdMatch(memberId);
+        verifyUser(memberId);
 
-        // DB에서 회원의 모든 Cart 엔티티 조회 후 DTO 변환
         return cartRepository.findByMemberId(memberId).stream()
                 .map(CartDto::toDto)
-                .collect(Collectors.toList());
+                .toList();
     }
 
-    /** =================== 장바구니 담기 =================== */
+    /**
+     * 장바구니 담기 (기존 존재 시 수량 덮어쓰기, 없으면 신규 생성)
+     */
     public Long addCart(Long memberId, Long inventoryId, int quantity) {
-        Member member = memberRepository.findById(memberId)
-                .orElseThrow(() -> new NoSuchElementException(MEMBER_NOT_FOUND));
-        ProductManagement productMgt = productManagementRepository.findById(inventoryId)
-                .orElseThrow(() -> new NoSuchElementException(PRODUCT_NOT_FOUND + " inventoryId: " + inventoryId));
+        verifyUser(memberId);
 
-        // 사용자 검증
-        verifyUserIdMatch(memberId);
+        Member member = findMember(memberId);
+        ProductManagement productManagement = findProductManagement(inventoryId);
 
-        // 기존 장바구니 존재 여부 확인
-        Cart existingCart = cartRepository.findByProductManagementAndMember(productMgt, member).orElse(null);
+        Cart existingCart = cartRepository
+                .findByMemberAndProductManagement(member, productManagement)
+                .orElse(null);
 
         if (existingCart != null) {
-            // 기존 수량 덮어쓰기
-            existingCart.setQuantity(quantity);
-            existingCart.setPrice(productMgt.getProduct().getPrice()
-                    .multiply(BigDecimal.valueOf(quantity)));
-            return cartRepository.save(existingCart).getCartId();
-        } else {
-            // 새 Cart 생성
-            BigDecimal price = productMgt.getProduct().getPrice().multiply(BigDecimal.valueOf(quantity));
-            Cart cart = new Cart(member, productMgt, quantity, price);
-            return cartRepository.save(cart).getCartId();
+            existingCart.replaceQuantity(quantity); // 기존 cart 수량 변경
+            return existingCart.getCartId();
         }
+
+        Cart cart = Cart.createCart(member, productManagement, quantity); // 신규 생성
+        cartRepository.save(cart);
+        return cart.getCartId();
     }
 
-    /** =================== 장바구니 수량 수정 =================== */
-    public CartDto updateCart(Long cartId, CartUpdateDto dto) {
-        Long memberId = dto.getMemberId();
-        verifyMember(cartId, memberId);
+    /**
+     * 장바구니 수량 수정 (소유자 검증 후 변경)
+     */
+    public CartDto updateCart(Long memberId, Long cartId, CartUpdateDto dto) {
+        verifyUser(memberId);
 
-        Cart cart = findCartById(cartId);
+        Cart cart = findOwnedCart(cartId, memberId);
+        cart.changeQuantity(dto.getQuantity());
 
-        // 수량 변경
-        cart.setQuantity(dto.getQuantity());
-        // 단가 * 수량 = price 재계산
-        cart.setPrice(cart.getProductManagement().getProduct().getPrice()
-                .multiply(BigDecimal.valueOf(dto.getQuantity())));
-
-        // 수정된 Cart 저장
-        Cart updatedCart = cartRepository.save(cart);
-
-        // DTO 변환 후 반환
-        return CartDto.toDto(updatedCart); // 또는 convertToDto(updatedCart)
+        return CartDto.toDto(cart);
     }
 
-    /** =================== 장바구니 삭제 =================== */
+    /**
+     * 장바구니 단일 삭제 (소유자 검증 포함)
+     */
     public void deleteCart(Long cartId, Long memberId) {
-        verifyMember(cartId, memberId);
-        cartRepository.delete(findCartById(cartId));
+        verifyUser(memberId);
+
+        Cart cart = findOwnedCart(cartId, memberId);
+        cartRepository.delete(cart);
     }
 
+    /**
+     * 장바구니 여러 건 삭제 (각 항목별 소유자 검증)
+     */
     public void deleteCartList(List<Long> cartIds, Long memberId) {
+        verifyUser(memberId);
+
         for (Long cartId : cartIds) {
-            verifyMember(cartId, memberId);
-            cartRepository.delete(findCartById(cartId));
+            Cart cart = findOwnedCart(cartId, memberId);
+            cartRepository.delete(cart);
         }
     }
 
-    /** =================== 헬퍼 메서드 =================== */
+    /**
+     * 회원 조회 (없으면 예외)
+     */
+    private Member findMember(Long memberId) {
+        return memberRepository.findById(memberId)
+                .orElseThrow(() -> new NoSuchElementException(MEMBER_NOT_FOUND));
+    }
+
+    /**
+     * 상품 옵션 조회 (없으면 예외)
+     */
+    private ProductManagement findProductManagement(Long inventoryId) {
+        return productManagementRepository.findById(inventoryId)
+                .orElseThrow(() -> new NoSuchElementException(PRODUCT_NOT_FOUND + " inventoryId: " + inventoryId));
+    }
+
+    /**
+     * 장바구니 조회 (없으면 예외)
+     */
     private Cart findCartById(Long cartId) {
         return cartRepository.findById(cartId)
-                .orElseThrow(() -> new NoSuchElementException(PRODUCT_NOT_FOUND + " cartId: " + cartId));
+                .orElseThrow(() -> new NoSuchElementException("장바구니를 찾을 수 없습니다. cartId: " + cartId));
     }
 
-    private void verifyMember(Long cartId, Long memberId) {
+    /**
+     * 장바구니 소유자 검증 후 반환
+     */
+    private Cart findOwnedCart(Long cartId, Long memberId) {
         Cart cart = findCartById(cartId);
-        if (memberId == null) throw new IllegalArgumentException("memberId가 null 입니다.");
-        verifyUserIdMatch(memberId);
-        if (!cart.getMember().getId().equals(memberId))
+
+        if (!cart.isOwnedBy(memberId)) {
             throw new SecurityException("해당 장바구니에 대한 권한이 없습니다.");
+        }
+        return cart;
+    }
+
+    /**
+     * 인증 사용자 유효성 검증
+     */
+    private void verifyUser(Long memberId) {
+        if (memberId == null) {
+            throw new IllegalArgumentException("memberId가 null 입니다.");
+        }
+        verifyUserIdMatch(memberId);
     }
 }
